# controllers/controller_interface.go
@@ -4,4 +4,5 @@ import "net/http"
 
 type IController interface {
 	Login(http.ResponseWriter, *http.Request) error
+	Register(http.ResponseWriter, *http.Request) error
 }
